--- a/Source/Portfolio.Web/ClientApp/src/index.css
+++ b/Source/Portfolio.Web/ClientApp/src/index.css
@@ -19,11 +19,11 @@ body {
 @keyframes fadeIn {
   from {
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateY(20px) translateZ(0);
   }
   to {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0) translateZ(0);
   }
 }
 
